[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/PTMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://MainMenuSprites/OGPC_Main_Menu_Background_Sprite_Blurred.png" type="Texture" id=3]

[sub_resource type="Shader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 250
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 180
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 180
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 180
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 180
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=10]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_levels/7 = true
glow_intensity = 0.1
glow_blend_mode = 0
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_enabled = true
adjustment_saturation = 0.01

[node name="OptionsMenu" type="Node2D"]
material = SubResource( 2 )
script = ExtResource( 2 )

[node name="OgpcMainMenuBackgroundSpriteBlurred" type="Sprite" parent="."]
position = Vector2( -2818, -59 )
scale = Vector2( 2.09063, 1.68333 )
texture = ExtResource( 3 )
offset = Vector2( 1640.27, 234.06 )

[node name="Title" type="Label" parent="."]
margin_left = 157.0
margin_top = -426.0
margin_right = 1191.0
margin_bottom = -141.0
custom_fonts/font = SubResource( 9 )
text = "Settings"

[node name="Label" type="Label" parent="."]
modulate = Color( 2.00392, 2, 2, 1 )
margin_left = -2.0
margin_top = -59.0
margin_right = 1398.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 4 )
text = "Audio"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = -7.0
margin_top = 146.0
margin_right = 1393.0
margin_bottom = 351.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "Video"
align = 1

[node name="Label3" type="Label" parent="."]
margin_left = -7.0
margin_top = 342.0
margin_right = 1393.0
margin_bottom = 547.0
grow_horizontal = 2
custom_fonts/font = SubResource( 6 )
text = "Controls"
align = 1

[node name="Label5" type="Label" parent="."]
margin_left = -11.0
margin_top = 552.0
margin_right = 1389.0
margin_bottom = 757.0
custom_fonts/font = SubResource( 8 )
text = "Back"
align = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 647, 336 )
current = true
zoom = Vector2( 5, 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 446.0
margin_top = 571.0
margin_right = 911.0
margin_bottom = 763.0

[node name="ControlsButton" type="TextureButton" parent="."]
margin_left = 266.0
margin_top = 334.0
margin_right = 1122.0
margin_bottom = 554.0

[node name="VideoButton" type="TextureButton" parent="."]
margin_left = 410.0
margin_top = 156.0
margin_right = 970.0
margin_bottom = 356.0

[node name="AudioButton" type="TextureButton" parent="."]
margin_left = 386.0
margin_top = -52.0
margin_right = 996.0
margin_bottom = 160.0

[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="ControlsButton" to="." method="_on_ControlsButton_button_up"]
[connection signal="button_up" from="VideoButton" to="." method="_on_VideoButton_button_up"]
[connection signal="button_up" from="AudioButton" to="." method="_on_AudioButton_button_up"]
